--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script src="scripts.min.js"></script>
+	<script src="dist/scripts.min.js"></script>
 </body>
 </html>
